log
Wed 24 Apr 2024 06:12:53 PM UTC: 
 tests:  0|6
total_score: 0/70
563553c
Wed 24 Apr 2024 06:16:24 PM UTC: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
41fd9fc
Wed 24 Apr 2024 06:51:01 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:32: error: expected expression before ‘)’ token
   45 |     if(map->buckets[indice] != )
      |                                ^
Compilation failed
a90782b
Wed 24 Apr 2024 07:07:22 PM UTC: 
 hashmap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘resuelve’:
hashmap.c:43:22: error: array subscript is not an integer
   43 |    while(map->buckets[posicion] != NULL)
      |                      ^
hashmap.c: In function ‘insertMap’:
hashmap.c:60:27: error: void value not ignored as it ought to be
   60 |       int posicionnueva = resuelve(map,&indice);
      |                           ^~~~~~~~
Compilation failed
de783ea
Wed 24 Apr 2024 07:08:08 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘resuelve’:
hashmap.c:43:22: error: array subscript is not an integer
   43 |    while(map->buckets[posicion] != NULL)
      |                      ^
hashmap.c: In function ‘insertMap’:
hashmap.c:60:19: error: void value not ignored as it ought to be
   60 |       int nueva = resuelve(map,&indice);
      |                   ^~~~~~~~
Compilation failed
eed14b0
Wed 24 Apr 2024 07:08:29 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘resuelve’:
hashmap.c:43:22: error: array subscript is not an integer
   43 |    while(map->buckets[posicion] != NULL)
      |                      ^
Compilation failed
d8abac5
Wed 24 Apr 2024 07:08:46 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e28033b
Wed 24 Apr 2024 07:09:17 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
51a0d37
Wed 24 Apr 2024 07:14:11 PM UTC: 
 hashmap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:11: error: unused variable ‘nuevo’ [-Werror=unused-variable]
   63 |       int nuevo = resuelve(map,indice);
      |           ^~~~~
hashmap.c: In function ‘resuelve’:
hashmap.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8c25420
Wed 24 Apr 2024 07:14:34 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘resuelve’:
hashmap.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
868ad25
Wed 24 Apr 2024 07:15:31 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘resuelve’:
hashmap.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1813b83
Wed 24 Apr 2024 07:17:05 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘resuelve’:
hashmap.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
adcc81b
Wed 24 Apr 2024 07:21:13 PM UTC: 
 hashmap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:57:30: error: ‘createPairkey’ undeclared (first use in this function); did you mean ‘createPair’?
   57 |       map->buckets[indice] = createPairkey, value);
      |                              ^~~~~~~~~~~~~
      |                              createPair
hashmap.c:57:30: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:57:43: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   57 |       map->buckets[indice] = createPairkey, value);
      |                                           ^
hashmap.c:57:7: error: statement with no effect [-Werror=unused-value]
   57 |       map->buckets[indice] = createPairkey, value);
      |       ^~~
hashmap.c:57:50: error: expected ‘;’ before ‘)’ token
   57 |       map->buckets[indice] = createPairkey, value);
      |                                                  ^
      |                                                  ;
hashmap.c:57:50: error: expected statement before ‘)’ token
hashmap.c: In function ‘resuelve’:
hashmap.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8ae2695
Wed 24 Apr 2024 07:21:29 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘resuelve’:
hashmap.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d149242
Wed 24 Apr 2024 07:22:53 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘resuelve’:
hashmap.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fc920fa
Wed 24 Apr 2024 07:23:59 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘resuelve’:
hashmap.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3edcbf3
